
* Upgrade forbiddenapis to version 3.3.  (Uwe Schindler)

Other
---------------------
* LUCENE-10526: Test-framework: Add FilterFileSystemProvider.wrapPath(Path) method for mock filesystems
  to override if they need to extend the Path implementation. (Gautam Worah, Robert Muir)

* LUCENE-10525: Test-framework: Add detection of illegal windows filenames to WindowsFS. (Gautam Worah)

======================= Lucene 9.1.0 =======================

API Changes
---------------------

* LUCENE-10244: MultiCollector::getCollectors is now public, allowing users to access the wrapped
  collectors. (Andriy Redko)

* LUCENE-10197: UnifiedHighlighter now has a Builder to construct it.  The UH's setters are now
  deprecated.  (Animesh Pandey, David Smiley)

* LUCENE-10301: the test framework is now a module. All the classes have been moved from
  org.apache.lucene.* to org.apache.lucene.tests.* to avoid package name conflicts with the
  core module. (Dawid Weiss)

* LUCENE-10183: KnnVectorsWriter#writeField to take KnnVectorsReader instead of VectorValues.
  (Zach Chen, Michael Sokolov, Julie Tibshirani, Adrien Grand)

* LUCENE-10335: Deprecate helper methods for resource loading in IOUtils and StopwordAnalyzerBase
  that are not compatible with module system (Class#getResourceAsStream() and Class#getResource()
  are caller sensitive in Java 11). Instead add utility method IOUtils#requireResourceNonNull(T)
  to test existence of resource based on null return value.  (Uwe Schindler, Dawid Weiss)

* LUCENE-10349: WordListLoader methods now return unmodifiable CharArraySets.  (Uwe Schindler)

* LUCENE-10377: SortField.getComparator() has changed signature. The second parameter is now
  a boolean indicating whether or not skipping should be enabled on the comparator.
  (Alan Woodward)

* LUCENE-10381: Require users to provide FacetsConfig for SSDV faceting. (Greg Miller)

* LUCENE-10368: IntTaxonomyFacets has been deprecated and is no longer a supported extension point